--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -19,6 +19,10 @@ Developer: Sergio Pacheco
 |------------------------------------------------------------------------------------------|
 | Footer                                   |                     FTRKY                     |
 |------------------------------------------------------------------------------------------|
+| Scroll To Top Button                     |                     STTKY                     |
+|------------------------------------------------------------------------------------------|
+| Anchor Tags                              |                     ANCKY                     |
+|------------------------------------------------------------------------------------------|
 | Homepage Welcome                         |                     HOMKY                     |
 |------------------------------------------------------------------------------------------|
 | Homepage Customer Images                 |                     HCIKY                     |
