--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -464,7 +464,7 @@ h1, h2 {
 
 #customerSection .customer-content-2 {
   padding: 0;
-  height: inherit;
+  max-height: 24rem;
 }
 
 #customerSection .carousel {
@@ -1246,6 +1246,9 @@ h1, h2 {
   }
   #customerSection .section-header {
     text-align: left;
+  }
+  #customerSection .customer-content-2 {
+    max-height: inherit;
   }
   #productSection .row {
     margin: auto;
