--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -1215,7 +1215,7 @@ h1, h2 {
     width: 80%;
   }
   #confirmationSection .confirmation-container {
-    padding: 5rem 0 1rem 0;
+    padding: 5rem 0;
   }
 }
 
