--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -986,6 +986,7 @@ h1, h2 {
 
 .about-banner {
   background-image: url("../images/jpg/compressed-main-images/about-us-header-M.jpg");
+  background-color: #555;
 }
 
 #aboutSection .about-info {
