--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -655,7 +655,7 @@ h1, h2 {
   right: 0;
   margin: auto;
   max-width: 90%;
-  max-height: 25rem;
+  max-height: fit-content;
   height: fit-content;
   background: #03002e;
   z-index: 400;
@@ -1195,7 +1195,6 @@ h1, h2 {
   }
   #productSection #storePopup {
     width: 70%;
-    max-height: 35rem;
   }
   #productSection #storePopup .row {
     max-height: 29rem;
