--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -696,6 +696,7 @@ h1, h2 {
   color: #fff;
   font-size: 1.5rem;
   text-transform: uppercase;
+  margin-top: 1rem;
 }
 
 #productSection #storePopup .row {
