--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -826,14 +826,14 @@ h1, h2 {
   margin-top: 0.5rem;
 }
 
-#wholesaleSection .dropdown .dropdown-menu .phone-link {
+#wholesaleSection .dropdown .dropdown-menu .phone-link, #wholesaleSection .dropdown .dropdown-menu .address-link {
   color: #07c2f9;
   text-decoration: none;
   border: none;
   border-radius: 0;
 }
 
-#wholesaleSection .dropdown .dropdown-menu .phone-link:hover {
+#wholesaleSection .dropdown .dropdown-menu .phone-link:hover, #wholesaleSection .dropdown .dropdown-menu .address-link:hover {
   border-bottom: 0.1rem solid #07c2f9;
 }
 
