--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -826,15 +826,15 @@ h1, h2 {
   margin-top: 0.5rem;
 }
 
-#wholesaleSection .dropdown .dropdown-menu .phone-link, #wholesaleSection .dropdown .dropdown-menu .address-link {
-  color: #07c2f9;
+#wholesaleSection .dropdown .dropdown-menu .phone-link, #wholesaleSection .dropdown .dropdown-menu .address-link, #wholesaleSection .dropdown .dropdown-menu .website-link, #wholesaleSection .dropdown .dropdown-menu .email-link {
   text-decoration: none;
   border: none;
   border-radius: 0;
 }
 
-#wholesaleSection .dropdown .dropdown-menu .phone-link:hover, #wholesaleSection .dropdown .dropdown-menu .address-link:hover {
+#wholesaleSection .dropdown .dropdown-menu .phone-link:hover, #wholesaleSection .dropdown .dropdown-menu .address-link:hover, #wholesaleSection .dropdown .dropdown-menu .website-link:hover, #wholesaleSection .dropdown .dropdown-menu .email-link:hover {
   border-bottom: 0.1rem solid #07c2f9;
+  color: #07c2f9;
 }
 
 #wholesaleSection .dropdown .dropdown-toggle::after {
