--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -1265,12 +1265,22 @@ h1, h2 {
   #pageContent {
     text-align: left;
   }
+  nav .dropdown {
+    pointer-events: none;
+  }
   nav .dropdown .dropdown-menu {
     width: 35%;
     left: 50% !important;
     right: 50% !important;
     transform: translateX(-50%) !important;
     top: 100% !important;
+  }
+  nav .dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+  }
+  nav .dropdown:hover .dropdown-toggle::after {
+    transform: rotate(180deg);
   }
   .image-banner {
     height: 20rem;
