--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -1384,6 +1384,9 @@ h1, h2 {
     width: 100%;
     margin: 0 auto;
   }
+  nav .dropdown {
+    cursor: pointer;
+  }
   nav .dropdown .dropdown-menu {
     width: 100%;
     margin: 0 auto;
@@ -1395,7 +1398,6 @@ h1, h2 {
   nav .dropdown:hover .dropdown-toggle {
     pointer-events: none;
     color: #07c2f9;
-    cursor: pointer;
   }
   nav .dropdown:hover .dropdown-toggle:after {
     transform: rotate(180deg);
