--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -358,6 +358,14 @@ nav .dropdown .dropdown-menu .nav-link {
   display: block;
 }
 
+.blurred {
+  -webkit-filter: blur(2.5px);
+  -moz-filter: blur(2.5px);
+  -o-filter: blur(2.5px);
+  -ms-filter: blur(2.5px);
+  filter: blur(2.5px);
+}
+
 h1, h2 {
   font-weight: bold;
 }
