--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -460,6 +460,10 @@ h1, h2 {
   display: block;
 }
 
+.coming-soon-pop .link-button:hover {
+  border-color: #07c2f9;
+}
+
 #topSection {
   background: linear-gradient(45deg, rgba(0, 0, 0, 0.55) 0, rgba(0, 0, 0, 0.55) 100%), url(../images/jpg/placeholder-header-D4.jpg);
   background-size: cover;
