--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -375,6 +375,7 @@ h1, h2 {
   text-transform: uppercase;
   color: #03002e;
   font-size: 2rem;
+  text-align: center;
 }
 
 .header-subtxt {
@@ -720,6 +721,7 @@ h1, h2 {
 
 #productSection .product-descript-container .section-header {
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 #productSection .product-descript-container .item-descript {
