--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -25,6 +25,8 @@ Developer: Sergio Pacheco
 |------------------------------------------------------------------------------------------|
 | Homepage Welcome Section                 |                     HOMKY                     |
 |------------------------------------------------------------------------------------------|
+| Willow's Foundation Section              |                     WFDKY                     |
+|------------------------------------------------------------------------------------------|
 | Homepage Customer Images                 |                     HCIKY                     |
 |------------------------------------------------------------------------------------------|
 | Products Pages/Content                   |                     PRDKY                     |
@@ -590,13 +592,13 @@ h1, h2 {
 }
 
 #customerSection .carousel .carousel-inner .carousel-item .slide-img-container {
-  height: 100%;
+  height: 25rem;
 }
 
 #customerSection .carousel .carousel-inner .carousel-item .slide-img-container img {
   width: 100%;
   object-fit: cover;
-  height: 15rem;
+  height: 100%;
 }
 
 #customerSection .carousel .carousel-indicators [data-bs-target] {
@@ -1389,6 +1391,9 @@ h1, h2 {
   #customerSection {
     width: 90%;
     max-width: 75rem;
+  }
+  #customerSection .carousel .carousel-inner .carousel-item .slide-img-container {
+    height: 100%;
   }
   #customerSection .carousel .carousel-inner .carousel-item .slide-img-container img {
     height: 100%;
