--- a/css/site-styling.css
+++ b/css/site-styling.css
@@ -994,6 +994,7 @@ h1, h2 {
   text-transform: capitalize;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 #storeSection button {
